<resources>
    <!-- Application Titles -->
    <string name="app_name">Information Wall</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Action bar menu -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>

    <!-- General -->
    <string name="new_blackboard_item_notification_title">New Blackboard Item</string>
    <string name="go_to_overview_notification">OVERVIEW</string>
    <string name="undo_delete_items">Item(s) deleted</string>
    <string name="undo_delete">UNDO</string>

    <!-- LogIn -->
    <string name="login_authenticating_progress_bar">Authenticating...</string>
    <string name="log_in_failed">Log in failed</string>
    <string name="cb_autoLogin">Keep me logged in</string>
    <string name="log_in_title_information">Enter your email address,
        password and Server URL to connect to your Information Wall!</string>
    <string name="log_in_title">Information Wall</string>
    <string name="log_in_overview_title">Select Account</string>
    <string name="fragment_account_overview_title">Account Overview</string>
    <string name="fragment_account_overview_new_account">NEW ACCOUNT</string>
    <string name="fragment_account_log_in_title">Log in</string>
    <!-- LogIn -->
    <string name="dialog_about_title">About</string>
    <!--- GridViewLongClickDialog  -->
    <string name="small">Small</string>
    <string name="middle">Middle</string>
    <string name="big">Big</string>
    <string name="cancelDialog">Cancel</string>
    <string name="acceptDialog">Ok</string>
    <string name="switch_showItem">Activate</string>
    <string name="title">Current Tile</string>

    <string name="dialog_fire_missiles">Test</string>
    <string name="title_activity_black_board">BlackBoard</string>
    <!-- Feed Reader -->
    <string name="activity_feed_reader_title">Feed Reader</string>
    <string name="search_rss_feed">RSS Search</string>
    <string name="feed_reader_no_feeds">No RSS Feeds selected</string>
    <!--- BlackBoard  -->
    <string name="fragment_black_board_title">Blackboard</string>
    <string name="fragment_black_board_add_item_title">New Entry</string>
    <string name="fragment_black_board_edit_item_title">Edit Entry</string>

    <string name="black_board_no_title">No Title</string>
    <string name="black_board_no_item_information">No Item Information</string>
    <string name="black_board_attachment">Attachment</string>
    <string name="black_board_description">Description</string>
    <string name="black_board_no_description_information">No description available</string>
    <string name="black_board_last_edited">Edited:</string>
    <!-- Blackboard Overview -->
    <string name="blackboard_overview_failed_download">Failed to download file</string>
    <!-- BlackBoard Add Item -->
    <string name="menu_black_board_save_item">Save</string>
    <string name="black_board_add_item_title">Title</string>
    <string name="black_board_add_item_contact">Search Contact</string>
    <string name="black_board_add_item_new_contact">Create new contact</string>
    <string name="black_board_add_item_description">Description</string>
    <string name="black_board_add_item_attachments">ADD ATTACHMENT</string>
    <string name="black_board_add_layout">CHANGE LAYOUT</string>

    <string name="black_board_add_item_snackbar_connection_error">Entry was not uploaded to the server</string>
    <string name="blackboard_add_item_validate_no_title">Please enter at least the title</string>
    <!--- BlackBoard Add Contact -->
    <string name="black_board_add_item_contact_full_name">Surname and Name</string>
    <string name="black_board_add_item_contact_email">E-Mail Address</string>
    <string name="black_board_add_item_contact_telephone">Telephone</string>
    <string name="black_board_add_item_contact_company">Company</string>
    <string name="black_board_add_item_contact_city">ZIP Code and City</string>
    <string name="black_board_add_item_contact_street">Street Name and Number</string>
    <!-- Blackboard choose Attachment Type -->
    <string name="dialog_blackboard_add_attachment_title">Attachment Type</string>
    <!-- Blackboard choose Attachment Type -->
    <string name="dialog_blackboard_add_web_attachment_title">Web Attachment</string>
    <string name="dialog_blackboard_add_web_attachment_hint">Web URL</string>
    <!-- Blackboard change layout -->
    <string name="blackboard_layout_text_only">Information only</string>
    <string name="blackboard_layout_document">Attachment only</string>
    <string name="blackboard_layout_document_and_info">Attachment And Information</string>
    <string name="blackboard_layout_save">SAVE</string>
    <!--- Util -->
    <string name="notification_upload_progress">Upload file: </string>
    <string name="notification_upload">Upload in progress</string>

    <!-- Preferences -->
    <string name="title_activity_preferences">Settings</string>

    <string name="pref_general">General</string>
    <string name="pref_pushNoti">Push Notification</string>
    <string name="pref_pushNoti_summary">Enable it to receive push notifications</string>

    <string name="pref_animation">Animation</string>
    <string name="pref_animation_summary">Enable animation on the Information Wall Screen</string>

    <string name="pref_animation_key">pref_animation</string>

    <!-- Other Strings -->
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="web_link">WEB LINK</string>
    <string name="local_device">LOCAL DEVICE</string>

    <!-- Progress Dialog -->
    <string name="progress_pleaseWait">Please wait...</string>
    <string name="progress_itemUpload">Uploading entry...</string>



</resources>
