<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlackBoard.Blackboard">

    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">

        <!-- Title -->
        <TableRow
            android:paddingLeft="5dp"
            android:layout_weight="1">
            <android.support.design.widget.TextInputLayout
                style="@style/BlackBoardAddItemEditText"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/edit_black_board_add_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/black_board_add_item_title" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <View
            style="@style/Divider" />
        <!-- Contact -->
        <TableRow
            android:paddingLeft="5dp"
            android:layout_weight="1">
            <android.support.design.widget.TextInputLayout
                style="@style/BlackBoardAddItemEditText"
                android:layout_weight="1">
                <AutoCompleteTextView
                    android:id="@+id/ac_tv_black_board_add_item_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"
                    android:hint="@string/black_board_add_item_contact" />
            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/ib_tv_black_board_add_item_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_down"
                android:background="@android:color/transparent"/>
        </TableRow>
        <View
            style="@style/Divider" />

        <include
            layout="@layout/content_add_contact">
        </include>

        <!-- Description -->
        <TableRow
            android:paddingLeft="5dp"
            android:layout_weight="3">
            <android.support.design.widget.TextInputLayout
                style="@style/BlackBoardAddItemEditText"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/edit_black_board_add_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/black_board_add_item_description"
                    android:gravity="top"
                    android:maxLength="130" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <View
            style="@style/Divider" />

        <!-- Layout -->
        <TableRow
            android:paddingLeft="5dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/b_black_board_add_layout"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:text="@string/black_board_add_layout"/>
        </TableRow>

        <!-- Layout -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/iv_black_board_layout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    />
        </TableRow>

        <View
            style="@style/Divider" />

        <!-- Attachments -->
        <TableRow
            android:paddingLeft="5dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/b_black_board_add_item_attachment"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:text="@string/black_board_add_item_attachments"/>
        </TableRow>

        <View
            style="@style/Divider" />

        <LinearLayout
            android:id="@+id/ll_attachment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_weight="3"
            android:orientation="vertical"/>
    </TableLayout>

</ScrollView>